--- a/Movie-Finder/Base.lproj/Main.storyboard
+++ b/Movie-Finder/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                 <rect key="frame" x="0.0" y="155" width="359" height="512"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="60" id="76I-Ps-tLq" customClass="MovieCelda" customModule="Movie_Finder" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cellMovie" rowHeight="60" id="76I-Ps-tLq" customClass="MovieCelda" customModule="Movie_Finder" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="359" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="76I-Ps-tLq" id="F13-Da-mEU">
